@@ -505,6 +505,7 @@ src/main.cpp -text
 src/marray.h -text
 src/oberror.cpp -text
 src/oberror.h -text
+src/plugins/BeyerSwinehart.cpp -text
 src/plugins/BoltzmannDistribution.cpp -text
 src/plugins/ClassicalRotor.cpp -text
 src/plugins/EckartCoefficients.cpp -text
